syntax = "proto3";

package io.mystore.stock.view;

import "google/protobuf/timestamp.proto";

message StockSkuItem {
  string stock_sku_item_id = 1;
  string sku_id = 2;
  string sku_name = 3;
  string order_id = 4;
  string order_sku_item_id = 5;
  google.protobuf.Timestamp shipped_utc = 6;
  string stock_order_id = 7;
}
